--- a/Home_Style.css
+++ b/Home_Style.css
@@ -101,4 +101,95 @@
     width: 90%;
   }
 }
+.search-container {
+  position: absolute;
+  top: 20px;
+  right: 20px; /* Positioned to the top-right */
+  width: 300px;
+}
+#searchBox {
+  width: 50%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+#results {
+  position: absolute;
+  top: 90px;
+  left: 0;
+  width: 50%;
+  border: 1px solid #ddd;
+  background: white;
+  display: none;
+  z-index: 1;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  display: none;
+}
+.result-item {
+  padding: 10px;
+  cursor: pointer;
+  background: #f9f9f9;
+  border-bottom: 1px solid #ddd;
+}
+.result-item:hover {
+  background: #e0e0e0;
+}
+.result-item a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+.result-item a:hover {
+  color: blue;
+}
+@media (min-width:0px) and (max-width:990px) {
+  .search-container {
+      position: absolute;
+      top: 20px;
+      right: 20px; /* Positioned to the top-right */
+      width: 300px;
+  }
+  #searchBox {
+      width: 50%;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+  }
+  #results {
+      position: absolute;
+      top: 300px;
+      left: 0;
+      width: 50%;
+      border: 1px solid #ddd;
+      background: white;
+      display: none;
+      z-index: 1;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  .result-item {
+      padding: 10px;
+      cursor: pointer;
+      background: #f9f9f9;
+      border-bottom: 1px solid #ddd;
+  }
+  .result-item:hover {
+      background: #e0e0e0;
+  }
+}
+#carouselExampleAutoplay {
+  width: 80%;
+  height: 60%;
+  margin: auto; /* Centering the carousel */
+}
+
+/* Ensure images scale properly to fit the carousel's height */
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the image covers the area without stretching */
+}
+
  
