--- a/Home_Style.css
+++ b/Home_Style.css
@@ -24,13 +24,18 @@
     
   }
   .non-veg {
-    height: 300px;
+    height: 270px;
     border: 2px solid;
-    width: 350px;
-    padding: 10px;
+    width: 320px;
+    padding: 13px;
     margin-top: 60px;
     border: none;
     border-radius: 5px;
+    transition: all 0.6s ease-in-out;
+  }
+
+  .non-veg:hover{
+   transform: scale(1.1);
   }
   .btn-nonveg {
     position: relative;
@@ -183,13 +188,32 @@
   width: 80%;
   height: 60%;
   margin: auto; /* Centering the carousel */
+  border-radius: 10px;
 }
 
 /* Ensure images scale properly to fit the carousel's height */
 .carousel-item img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Ensure the image covers the area without stretching */
+  object-fit: cover; 
+  border-radius: 20px;/* Ensure the image covers the area without stretching */
+}
+@media (min-width:900px) {
+  #results {
+    position: absolute;
+    top: 90px;
+    left: 50%;
+    width: 50%;
+    border: 1px solid #ddd;
+    background: white;
+    display: none;
+    z-index: 1;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    display: none;
+  }
 }
 
  
