--- a/Home_Style.css
+++ b/Home_Style.css
@@ -4,6 +4,10 @@
   font-size: 30px;
   margin-left: 10px;
 }
+#fev_div_button{
+border: none;
+border-radius: 10px;
+}
 #search {
   height: 30px;
   border-radius: 20px;
@@ -227,6 +231,8 @@
   display: none;
   height: 50vh;
   overflow-y: scroll;
+  
+
 
 }
 .fev_div{
