--- a/Home_Style.css
+++ b/Home_Style.css
@@ -151,6 +151,13 @@
 .result-item a:hover {
   color: blue;
 }
+#btn_close{
+  position: absolute;
+  right: 0px;
+}
+#btn_close:active{
+  background-color: rgb(12, 230, 12);
+}
 @media (min-width: 0px) and (max-width: 990px) {
   .search-container {
     position: absolute;
