--- a/Home_Style.css
+++ b/Home_Style.css
@@ -4,6 +4,11 @@
   font-size: 30px;
   margin-left: 10px;
 }
+#navv{
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 #fev_div_button {
   border: none;
   border-radius: 10px;
